--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test:algo": "mocha algo",
     "test:redis": "mocha redis",
-    "test:mocha": "mocha test",
+    "test:mocha": "mocha mocha",
     "test:grammar": "mocha grammar"
   },
   "author": "",
