--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test:algo": "mocha algo",
     "test:redis": "mocha redis",
     "test:mocha": "mocha mocha",
-    "test:grammar": "mocha grammar"
+    "test:grammar": "mocha grammar",
+    "test:nodejs": "mocha nodejs"
   },
   "author": "",
   "license": "ISC",
